--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ sqlalchemy[asyncpg]
 pydantic
 pydantic-settings
 openai
-anthropic
-google-generativeai
 aiohttp
 python-dotenv
+google-generativeai>=0.3.0
